@@ -28,17 +28,21 @@ class BsMax_MT_Animation_Tools(bpy.types.Menu):
 	def draw(self, ctx):
 		layout=self.layout
 		layout.operator('anim.character_lister', text='Character Lister', icon='GHOST_DISABLED')
+
 		if ctx.mode != 'POSE': # this is temprary
 			layout.separator()
 			layout.operator('anim.path_constraint', text='Path Constraint', icon='CON_FOLLOWPATH')
 			layout.operator('anim.location_constraint', text='Location Constraint', icon='CON_LOCLIMIT')
+
 		layout.separator()
 		layout.operator('anim.link_constraint', text='Parent Constraint', icon='LINKED')
 		layout.operator('anim.link_to_world', text='Parent to World', icon='UNLINKED')
+
 		if ctx.mode != 'POSE': # this is temprary
 			layout.separator()
 			layout.operator('anim.lookat_constraint', text='Lookat Constraint', icon='CON_TRACKTO')
 			layout.operator('anim.orientation_constraint', text='Orientation Constraint', icon='CON_ROTLIMIT')
+
 		layout.separator()
 		layout.operator('anim.driver_fixer', text='Fix Override Driver Issue', icon='GHOST_ENABLED')
 		layout.operator('anim.freeze_on', text='Freeze On', icon='TEMP')
